--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@ div.tab button:hover {
 }
 
 .header .navbar-nav .has-submenu.menu-large ul li {
-    background: url(images/menubg.jpg) repeat-y center center #ffffff !important;
+    background: url(menubg.jpg) repeat-y center center #ffffff !important;
 }
 
 .tab-details {
@@ -658,7 +658,7 @@ div.tab button:hover {
 
 .footer {
     padding: 4rem 0 4rem;
-    background: url(images/footer.png) repeat-x center bottom #edeff2;
+    background: url(footer.png) repeat-x center bottom #edeff2;
 }
 
 .footer.wb {
@@ -1142,7 +1142,7 @@ div.tab button:hover {
 }
 
 .banner-spot {
-    background: #edeff2 url("images/ads-bg.png") no-repeat scroll center right / auto 100%;
+    background: #edeff2 url("ads-bg.png") no-repeat scroll center right / auto 100%;
     clear: both;
     display: block;
     height: auto;
@@ -1310,7 +1310,7 @@ hr.invis3 {
     position: absolute;
     height: 90px;
     display: block;
-    content: url(images/hover.png);
+    content: url(hover.png);
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     -ms-transition: all .3s ease-in-out;
@@ -1327,7 +1327,7 @@ hr.invis3 {
 }
 
 .hovereffect span.videohover::before {
-    content: url(images/videohover.png);
+    content: url(videohover.png);
 }
 
 .blog-list .blog-meta.big-meta h4 {
