--- a/bootstrap.css
+++ b/bootstrap.css
@@ -756,7 +756,7 @@ pre code {
 
 .container {
   position: relative;
-  margin-left: relative;
+  margin-left: auto;
   margin-right: auto;
   padding-right: 15px;
   padding-left: 15px;
