--- a/bootstrap.css
+++ b/bootstrap.css
@@ -10,6 +10,7 @@ html {min-width:100%;
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-size:contain;
 }
 
 body {
